hphp/hack/test/typecheck/printf_crash.php.exp
File "printf_crash.php--printf.php", line 5, characters 10-19:
Invalid return type (Typing[4336])
File "printf_crash.php--printf.php", line 5, characters 10-19:
Expected void because this function does not always return a value
File "printf_crash.php--printf.php", line 5, characters 60-65:
But got string
